--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,29 @@ cache:
 
 script: "./gradlew clean build"
 
+
+before_deploy:
+  - zip -r freelec-webservice *
+  - mkdir -p deploy
+  - mv freelec-webservice.zip deploy/freelec-webservice.zip
+
+
+deploy:
+  - provider: s3
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key: $AWS_SECRET_KEY
+    bucket: freelec-webservice-build
+    region: ap-northeast-2
+    skip_cleanup: true
+    acl: private
+    local_dir: deploy
+    wait-until-deployed: true
+
+
 # CI 실행 완료시 메일로 알람
 notifications:
   email:
     recipients:
       - wj100213@gmail.com
+
+
