--- a/.travis.yml
+++ b/.travis.yml
@@ -18,9 +18,13 @@ script: "./gradlew clean build"
 
 
 before_deploy:
-  - zip -r freelec-webservice *
-  - mkdir -p deploy
-  - mv freelec-webservice.zip deploy/freelec-webservice.zip
+  - mkdir -p before-deploy
+  - cp scripts/*.sh before-deploy/
+  - cp appspec.yml before-deploy/
+  - cp build/libs/*.jar before-deploy/
+  - cd before-deploy && zip -r before-deploy *
+  - cd ../ && mkdir -p deploy
+  - mv before-deploy/before-deploy.zip deploy/freelec-webservice.zip
 
 
 deploy:
