--- a/build.gradle
+++ b/build.gradle
@@ -36,5 +36,8 @@ dependencies {
     compile('org.springframework.session:spring-session-jdbc')
 
     testCompile('org.springframework.boot:spring-boot-starter-test')
+    testCompile "org.projectlombok:lombok"
+    annotationProcessor('org.projectlombok:lombok')
+    testAnnotationProcessor('org.projectlombok:lombok')
     testCompile('org.springframework.security:spring-security-test')
 }
